# Scrapper-Test

./: .env.example  README.md  extensibility_plan.md  pyproject.toml  reviewsample.txt  test.py  test_analysis.py  test_analysis_results.json  test_e2e_pipeline.py  test_pipeline.py  test_scrape_debug.py  test_scraper_fixed.py
app/: main.py
app/api/: routes.py  ui_routes.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  company.py  company_insights.py  review.py  review_analysis.py
app/schemas/: __init__.py  analysis.py  company.py  insights.py  review.py
app/services/ai/: analyzer.py
app/services/embeddings/: generator.py
app/services/insights/: generator.py
app/services/scraping/: google_reviews.py  playwright_helpers.py
app/static/: index.html
app/utils/: dedup.py  log_config.py
app/workers/: celery_app.py  tasks.py
db_migrations/: env.py
db_migrations/versions/: 89a2f4e7b32c_initial_schema_with_pain_points_and_.py  8e4427050247_content_hash_unique_per_company_not_.py
